@@ -1,6 +1,9 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-devhelp.desktop.in.in
+data/devhelp.desktop.in.in
+data/devhelp.schemas.in
+data/ui/devhelp.glade
+misc/gedit-plugin/devhelp.gedit-plugin.desktop.in
 src/dh-base.c
 src/dh-book-tree.c
 src/dh-html.c
@@ -12,6 +15,3 @@ src/dh-search.c
 src/dh-util.c
 src/dh-window.c
 src/eggfindbar.c
-devhelp.schemas.in
-ui/devhelp.glade
-misc/gedit-plugin/devhelp.gedit-plugin.desktop.in
