@@ -1,3 +1,3 @@
-devhelp.desktop.in
+data/devhelp.desktop.in
 misc/gedit-plugin/devhelp/devhelp.py
 src/dh-gecko-utils.cpp
